public/css/styles.css
/******* Change Box Model ***************/
*,
*:before,
*:after {
  box-sizing: border-box;
}

body {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  padding: 0.5rem;
  background-color: #fff;
}

.siteName {
  font-size: 2em;
  font-weight: bold;
  color: #333;
}

.siteName a {
  text-decoration: none;
  color: #333;
}

#tools {
  text-align: right;
  padding-right: 0.5rem;
}

#tools a {
  text-decoration: none;
  color: #333;
  position: relative;
  right: 1px;
  top: -2rem;
}

#top-header {
  padding-bottom: 1rem;
}

nav {
  background-color: #000;
  color: #fff;
  padding: 1rem;
}

.nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: space-around;
}

.hero {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.hero h2 {
  grid-row: 1/2;
  grid-column: 1/3;
}

.hero img {
  width: 100%;
  height: auto;
}

.hero picture {
  grid-row: 2/3;
  grid-column: 1/3;
}

.hero-info {
  font-weight: 800;
  grid-column: 1/2;
  grid-row: 2/3;
  background-color: rgba(255, 255, 255, 0.641);
  color: rgb(5, 194, 252);
  border-radius: 5px;
  width: fit-content;
  height: fit-content;
  padding: 0.5rem;
}

.hero-info h3,
.hero-info p {
  margin: 0.3rem 0;
  padding-left: 0.3rem;
  padding-bottom: 0.3rem;
}

.hero-info a {
  background-color: rgb(5, 194, 252);
  padding: 0.5rem;
  text-decoration: none;
  color: #000;
}

.reviews ul {
  padding-left: 1rem;
}

.reviews li {
  padding: 0.3rem;
}

.upgrades {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 0.5rem;
}

.upgrades h2 {
  grid-column: 1/3;
}

.upgrades .upgrade-container {
  text-align: center;
  width: 100%;
  height: auto;
}

.upgrades .upgrade-img {
  background-color: rgb(5, 194, 252);
  margin: 0 auto;
  width: 100%;
  height: 6rem;
  padding: 1rem;
}

.background-img {
  display: none;
}

